create github pages

--- a/economía.html
+++ b/economía.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header4 cid-sazeFcDULY mbr-fullscreen" id="header4-3s">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header4 cid-sazeFcDULY mbr-fullscreen" id="header4-3s">
 
     
     
@@ -428,17 +428,7 @@ y países de exportación principales, pronóstico para 2020<br>Fuente: Comisió
 comunicación regional para difundir los <strong>análisis de los efectos económicos y sociales a nivel nacional
 y regional en la situación de los sistemas de salud, la estructura laboral, el empleo, la escolaridad, la
 producción, el comercio o la política macroeconómica</strong>. El Observatorio es coordinado por la CEPAL,
-con el apoyo de los coordinadores residentes de las Naciones Unidas.[8]<br><br>Red de Transmisión del Conocimiento (RTC)<br>Espacio destinado al fortalecimiento del saber&nbsp;y la cooperación en el ámbito de las estadísticas, entorno donde se permite&nbsp; compartir
-ideas y recomendaciones entre las oficinas nacionales de estadística y otros actores de los sistemas
-estadísticos nacionales.[8]<br><br>Videoconferencias<br>En colaboración con la Organización Internacional del Trabajo (OIT) y el Instituto Nacional
-de Estadísticas (INE) de Chile, se ha realizado videoconferencias con las oficinas de estadísticas de los países para atender sus
-inquietudes y brindar asistencia técnica. La Red cuenta con una página web dedicada a difundir
-las publicaciones y anuncios de las organizaciones internacionales y las oficinas nacionales de
-estadística sobre las recomendaciones y los planes de contingencia adoptados.[8]<br><br>Reuniones virtuales y programadas<br>Una modalidad de teletrabajo, reuniones&nbsp; con representantes
-de gobierno al más alto nivel vinculadas a los temas del plan de trabajo, el quehacer de los órganos
-subsidiarios de la CEPAL y la crisis del COVID-19. En ellas han participado representantes de
-organismos, fondos y programas de Naciones Unidas, así como los coordinadores residentes,
-actores clave en la implementación de las acciones sobre el terreno.[8]<br></p>
+con el apoyo de los coordinadores residentes de las Naciones Unidas.[8]<br></p>
             </div>
         </div>
     </div>
