create github pages

--- a/page9.html
+++ b/page9.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="header11 cid-saD1wNnwn6" id="header11-7p">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header11 cid-saD1wNnwn6" id="header11-7p">
 
     
 
@@ -313,7 +313,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 
-                <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">Otros Factores considerados</h4>
+                <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">Otros factores considerados</h4>
                 <p class="mbr-text mbr-fonts-style display-7">
                     Asimismo, tuvimos en cuenta que:<br><strong>-</strong>Según la encuensta&nbsp;Encuesta Residencial de Servicios de Telecomunicaciones (ERESTEL) 2018 realizada por OSPITEL, el 73.4% de hogares del país cuenta con un smartphone, pero solo el 38.2% de hogares rurales posee uno. Esta diferencia entre reigones dificulta el monitoreo a distancia. [1]<br><br><strong>-</strong>El riesgo de confundir a un paciente preasintomático con uno asintomático siempre está presente y debe evitarse o impedirse en el mejor de los casos.<br><br><strong>-</strong>De acuerdo con estimaciones de la Comisión Económica para América Latina y el Caribe (Cepal) en su informe ‘El desafío social en tiempos del COVID-19‘, la crisis generada por el coronavirus arrastrará hacia la pobreza a más de 28 millones de personas, por lo que es importante contar con un sistema de monitoreo que cuente con una buena relación calidad-precio y permita informarse al médico en el menor tiempo posible. [2]<br><br></p>
             </div>
@@ -341,7 +341,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9">
                 <hr class="line">
-                <p class="mbr-text align-center mbr-fonts-style my-4 display-5"><strong>Falta de tecnología personalizada y accesible para el monitoreo de pacientes asintomáticos a distancia&nbsp;</strong></p>
+                <p class="mbr-text align-center mbr-fonts-style my-4 display-5"><strong>Falta de tecnología personalizada y accesible para el monitoreo de las señales pulmonares y cardiacas de pacientes asintomáticos a distancia&nbsp;</strong></p>
                 <hr class="line">
             </div>
         </div>
