create github pages

--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
 
     
 
@@ -239,7 +239,7 @@
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 3: Conjunto de sensores para medición de parámetros mediante de un dispositivo móvil
 </strong><div><strong><br></strong></div></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de un grupo de sensores que miden la saturación de oxígeno, temperatura y sonidos pulmonares, cuyos resultados podrán ser almacenados y registrados [5]. Cada uno de estos contarán con una salida USB y se conectarán al puerto tipo C del celular mediante un adaptador hub usb.&nbsp;&nbsp;<br><br>Los sensores no tienen memoria propia ni batería. Para que el almacenamiento sea posible, requiere conectarse a un dispositivo móvil para funcionar y también poder guardar los datos de las mediciones en una aplicación.&nbsp;<br>
+                    <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de un grupo de sensores que miden la saturación de oxígeno y temperatura del paciente, cuyos resultados podrán ser almacenados y registrados [5]. Cada uno de estos contarán con una salida USB y se conectarán al puerto tipo C del celular mediante un adaptador hub usb.&nbsp;&nbsp;<br><br>Los sensores no tienen memoria propia ni batería. Para que el almacenamiento sea posible, requiere conectarse a un dispositivo móvil para funcionar y también poder guardar los datos de las mediciones en una aplicación.&nbsp;<br>
 <br>Además, la aplicación enviará recordatorios para el registro de medición del paciente según la frecuencia que un médico le indique. Y en el caso de que los niveles de alguna medición salgan de un umbral preestablecido la misma aplicación enviaría una alerta al médico tratante, significando que requiere mayor prioridad de atención.
 <br></p>
                 </div>
