--- a/page2.html
+++ b/page2.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header12 cid-s9Li6aq2Gc" id="header12-12">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header12 cid-s9Li6aq2Gc" id="header12-12">
 
     
 
