--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
 
     
 
@@ -317,8 +317,8 @@
                 <div class="mbr-text mbr-fonts-style display-7">
                     <div><br></div><ol>
                         <li>“Minsa brinda recomendaciones sobre los cuidados que deben seguir los pacientes asintomáticos,” Www.gob.pe, 2020. [Online].&nbsp; Disponible en: https://www.gob.pe/institucion/minsa/noticias/208244-minsa-brinda-recomendaciones-sobre-los-cuidados-que-deben-seguir-los-pacientes-asintomaticos/. [Consultado: 27 de Septiembre 2020].</li><li>“Preguntas y respuestas sobre la enfermedad por coronavirus (COVID-19),” Who.int, 2018. [Online]. Disponible en: https://www.who.int/es/emergencies/diseases/novel-coronavirus-2019/advice-for-public/q-a-coronaviruses. [Consultado: 27-Sep-2020].</li><li>H. Kaschel Cárcamo and J. Pérez Bahamondes, “Monitoreo ubicuo de salud en tiempo real con WBSN,” Ingeniare. Revista chilena de ingeniería, vol. 22, no. 2, pp. 169–176, Abr. 2014. Disponible en: https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0718-33052014000200003. [Consultado: 28 de Septiembre 2020]</li><li>“A WIRELESS WEARABLE TWO-PATCH SOLUTION FOR DETECTING AND MONITORING PNEUMONIA”,Ohiolink.edu, 2011. [Online]. Disponible en: https://etd.ohiolink.edu/!etd.send_file?accession=case1484619771715925&amp;disposition=inline. [Consultado: 26 de Septiembre 2020</li><li>D. Dias and J. Paulo Silva Cunha, "Wearable Health Devices—Vital Sign Monitoring, Systems and Technologies", Sensors, vol. 18, no. 8, p. 2414, 2018. Disponible en: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6111409/. [Consultado 24 de Septiembre 2020].</li><li>“Amazon.com: Echo Dot (3ra Gen) - Parlante inteligente con Alexa - Carbón: Amazon Devices,” Amazon.com, 2020. [Online]. Disponible en: https://www.amazon.com/-/es/dp/B07FZ8S74R/ref=s9_acsd_al_bw_c2_x_1_t?pf_rd_m=ATVPDKIKX0DER&amp;pf_rd_s=merchandised-search-5&amp;pf_rd_r=F0D9SRTHZ09Q8GT4PXRZ&amp;pf_rd_t=101&amp;pf_rd_p=342571e0-5754-4a97-9dd4-dfeef00fe51e&amp;pf_rd_i=9818047011. [Consultado: 29 de Septiembre 2020].
-</li><li>B.-S. Lin, C.-Y. Huang, C.-Y. Chen, and J.-H. Lin, “Design of a finger base-type pulse oximeter,” Review of Scientific Instruments, vol. 87, no. 1, p. 013108, Enero. 2016.
- Disponible en: https://pubmed.ncbi.nlm.nih.gov/26827310/</li><li>“Oxitone 1000M - Oxitone,” Oxitone, 2019. [Online]. Disponible en: https://www.oxitone.com/oxitone-1000m/. [Consultado: 21 de Septiembre 2020].
+</li><li>B.-S. Lin, C.-Y. Huang, C.-Y. Chen, y J.-H. Lin, “Design of a finger base-type pulse oximeter,” Review of Scientific Instruments, vol. 87, no. 1, p. 013108, Enero. 2016.
+ Disponible en: https://pubmed.ncbi.nlm.nih.gov/26827310/</li><li>Oxitone. (2019). “Oxitone 1000M - Oxitone,”. [Online]. Disponible en: https://www.oxitone.com/oxitone-1000m/. [Consultado: 21 de Septiembre 2020].
 </li><li>R. Miotto, M. Danieletto, J. R. Scelza, B. A. Kidd, and J. T. Dudley, “Reflecting health: smart mirrors for personalized medicine,” npj Digital Medicine, vol. 1, no. 1, Nov. 2018. Disponible en: https://pubmed.ncbi.nlm.nih.gov/31304340/. [Consultado: 24 de Septiembre 2020]</li><li>NHS England. 2020. “Pulse Oximetry to Detect Early Deterioration of Patients with
  COVID-19 in Primary and Community Care Settings.”&nbsp; [Online] Disponible en: https://www.england.nhs.uk/coronavirus/publication/pulse-oximetry-to-detectearly-deterioration-of-patients-with-covid-19-in-primary-and-community-caresettings/. [Consultado: 27 de Septiembre 2020]</li>
                     </ol>
