--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
 
     
 
@@ -231,17 +231,19 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/whatsapp-image-2020-09-29-at-2.11.36-am-1076x831.jpg" alt="Mobirise">
+                    <img src="assets/images/whatsapp-image-2020-10-04-at-10.51.57-pm-1076x833.jpg" alt="Mobirise">
                     <p class="mbr-description mbr-fonts-style pt-2 align-center display-4">Posible boceto de la estrategia 3</p>
                 </div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 3: Conjunto de sensores para medición de parámetros mediante de un dispositivo móvil
-</strong><div><strong><br></strong></div></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de un grupo de sensores que miden la saturación de oxígeno[7] y temperatura del paciente[8], cuyos resultados podrán ser almacenados y registrados [9]. Cada uno de estos contarán con una salida USB y se conectarán al puerto tipo C del celular mediante un adaptador hub usb.&nbsp;&nbsp;<br><br>Los sensores no tienen memoria propia ni batería. Para que el almacenamiento sea posible, requiere conectarse a un dispositivo móvil para funcionar y también poder guardar los datos de las mediciones en una aplicación.&nbsp;<br>
-<br>Además, la aplicación enviará recordatorios para el registro de medición del paciente según la frecuencia que un médico le indique. [10] Y en el caso de que los niveles de alguna medición salgan de un umbral preestablecido la misma aplicación enviaría una alerta al médico tratante, significando que requiere mayor prioridad de atención.
-<br></p>
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 3: Dispositivo medidor de señales vitales basado en PPG en forma de banda</strong></h3>
+                    <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de una técnica llamada fotopletismografía (PPG), la cual es una técnica óptica simple usada para descubrir cambios volumétricos en sangre en la circulación periférica. Asimismo, es de bajo costo y un método no invasivo que realiza mediciones en la superficie de la piel. [8]
+<br>
+<br>Nuestra idea consta de una banda ligera localizada en la frente que incluye un sensor, el cual monitorea señales como saturación de oxígeno, temperatura, frecuencia respiratoria y cardiaca. Esta ubicación está sustentada en las investigaciones realizadas en el estado del arte, específicamente OxiMax forehead SpO2 sensor.[9] Según investigaciones realizadas por Medtronic, la frente es una zona estratégica debido a que se ha demostrado que las mediciones son más precisas  que las tomadas por un oxímetro de dedo convencional. [10] <br>
+<br>También se ha identificado que los sensores utilizados en la frente miden el cambio de la saturación de oxígeno arterial alrededor de uno a dos minutos antes que un sensor digital para pacientes con pulsos débiles. Cabe resaltar que la técnica del PPG resulta muy efectiva en la frente, la cual se encuentra entre sus principales ubicaciones para su uso.[11]
+<br>
+<br>Por otro lado, las mediciones resultantes serán transmitidas vía Bluetooth al celular del paciente. Estas serán almacenadas en una aplicación con una interfaz amigable e interactiva que le permitirá al usuario revisar los cambios en sus signos vitales, permitiendo un monitoreo constante y eficaz.&nbsp;<br></p>
                 </div>
             </div>
         </div>
@@ -318,9 +320,11 @@
                     <div><br></div><ol>
                         <li>“Minsa brinda recomendaciones sobre los cuidados que deben seguir los pacientes asintomáticos,” Www.gob.pe, 2020. [Online].&nbsp; Disponible en: https://www.gob.pe/institucion/minsa/noticias/208244-minsa-brinda-recomendaciones-sobre-los-cuidados-que-deben-seguir-los-pacientes-asintomaticos/. [Consultado: 27 de Septiembre 2020].</li><li>“Preguntas y respuestas sobre la enfermedad por coronavirus (COVID-19),” Who.int, 2018. [Online]. Disponible en: https://www.who.int/es/emergencies/diseases/novel-coronavirus-2019/advice-for-public/q-a-coronaviruses. [Consultado: 27-Sep-2020].</li><li>H. Kaschel Cárcamo and J. Pérez Bahamondes, “Monitoreo ubicuo de salud en tiempo real con WBSN,” Ingeniare. Revista chilena de ingeniería, vol. 22, no. 2, pp. 169–176, Abr. 2014. Disponible en: https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0718-33052014000200003. [Consultado: 28 de Septiembre 2020]</li><li>“A WIRELESS WEARABLE TWO-PATCH SOLUTION FOR DETECTING AND MONITORING PNEUMONIA”,Ohiolink.edu, 2011. [Online]. Disponible en: https://etd.ohiolink.edu/!etd.send_file?accession=case1484619771715925&amp;disposition=inline. [Consultado: 26 de Septiembre 2020</li><li>D. Dias and J. Paulo Silva Cunha, "Wearable Health Devices—Vital Sign Monitoring, Systems and Technologies", Sensors, vol. 18, no. 8, p. 2414, 2018. Disponible en: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6111409/. [Consultado 24 de Septiembre 2020].</li><li>“Amazon.com: Echo Dot (3ra Gen) - Parlante inteligente con Alexa - Carbón: Amazon Devices,” Amazon.com, 2020. [Online]. Disponible en: https://www.amazon.com/-/es/dp/B07FZ8S74R/ref=s9_acsd_al_bw_c2_x_1_t?pf_rd_m=ATVPDKIKX0DER&amp;pf_rd_s=merchandised-search-5&amp;pf_rd_r=F0D9SRTHZ09Q8GT4PXRZ&amp;pf_rd_t=101&amp;pf_rd_p=342571e0-5754-4a97-9dd4-dfeef00fe51e&amp;pf_rd_i=9818047011. [Consultado: 29 de Septiembre 2020].
 </li><li>B.-S. Lin, C.-Y. Huang, C.-Y. Chen, y J.-H. Lin, “Design of a finger base-type pulse oximeter,” Review of Scientific Instruments, vol. 87, no. 1, p. 013108, Enero. 2016.
- Disponible en: https://pubmed.ncbi.nlm.nih.gov/26827310/</li><li>Oxitone. (2019). “Oxitone 1000M - Oxitone,”. [Online]. Disponible en: https://www.oxitone.com/oxitone-1000m/. [Consultado: 21 de Septiembre 2020].
-</li><li>R. Miotto, M. Danieletto, J. R. Scelza, B. A. Kidd, and J. T. Dudley, “Reflecting health: smart mirrors for personalized medicine,” npj Digital Medicine, vol. 1, no. 1, Nov. 2018. Disponible en: https://pubmed.ncbi.nlm.nih.gov/31304340/. [Consultado: 24 de Septiembre 2020]</li><li>NHS England. 2020. “Pulse Oximetry to Detect Early Deterioration of Patients with
- COVID-19 in Primary and Community Care Settings.”&nbsp; [Online] Disponible en: https://www.england.nhs.uk/coronavirus/publication/pulse-oximetry-to-detectearly-deterioration-of-patients-with-covid-19-in-primary-and-community-caresettings/. [Consultado: 27 de Septiembre 2020]</li>
+ Disponible en: https://pubmed.ncbi.nlm.nih.gov/26827310/</li><li>J. Allen, “Photoplethysmography and its application in clinical physiological measurement,” Physiological Measurement, vol. 28, no. 3, pp. R1–R39, Feb. 2007.
+</li><li>“NellcorTM SpO₂ Forehead Sensor with OxiMaxTM Technology | Medtronic,” Medtronic.com, 2020. [Online]. Available: https://www.medtronic.com/covidien/en-us/products/pulse-oximetry/nellcor-spo2-forehead-sensor.html. [Accessed: 05-Oct-2020].
+</li><li>G. S. Agashe, J. Coakley, and P. D. Mannheimer, “Forehead Pulse Oximetry,” Anesthesiology, vol. 105, no. 6, pp. 1111–1116, Dec. 2006.
+</li><li>M. Ghamari, “A review on wearable photoplethysmography sensors and their potential future applications in health care,” International Journal of Biosensors &amp; Bioelectronics, vol. 4, no. 4, 2018.
+</li>
                     </ol>
                 </div>
             </div>
