create github pages

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-md-9">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>¿Qué proponemos?</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>¿Qué proponemos?: M.A.P.A.</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Nuestra propuesta de solución ante el problema</h4>
                 <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page3.html">Vea el proyecto y sus avances</a></div>
             </div>
                         <div class="col-md-12 col-lg-9">
-                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page3.html">Novedad: Estado del arte y requerimientos</a></div>
+                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page14.html">Novedad: Conceptos de solución</a></div>
         </div>
     </div>
 </div></section>
