--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
     
 
     
@@ -170,7 +170,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="page14.html"><img src="assets/images/mbr-2-517x345.jpeg" alt="" data-slide-to="1"></a>
+                        <a href="page14.html"><img src="assets/images/gears-686316-1920-517x388.jpg" alt="" data-slide-to="1"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
