create github pages

--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
 
     
 
@@ -240,9 +240,9 @@
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Estrategia 3: Dispositivo medidor de señales vitales basado en PPG en forma de banda</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">Esta estrategia se enfoca en la medición de señales a través de una técnica llamada fotopletismografía (PPG), la cual es una técnica óptica simple usada para descubrir cambios volumétricos en sangre en la circulación periférica. Asimismo, es de bajo costo y un método no invasivo que realiza mediciones en la superficie de la piel. [8]
 <br>
-<br>Nuestra idea consta de una banda ligera localizada en la frente que incluye un sensor, el cual monitorea señales de saturación de oxígeno, temperatura y frecuencia cardiaca. Esta ubicación está sustentada en las investigaciones realizadas en el estado del arte, específicamente el OxiMax forehead SpO2 sensor.[9] Según investigaciones realizadas por Medtronic, la frente es una zona estratégica debido a que se ha demostrado que las mediciones son más precisas  que las tomadas por un oxímetro de dedo convencional. [10] <br>
+<br>Nuestra idea consta de una banda ligera localizada en la frente que incluye un sensor, el cual monitorea señales como saturación de oxígeno, temperatura, frecuencia respiratoria y cardiaca. Esta ubicación está sustentada en las investigaciones realizadas en el estado del arte, específicamente OxiMax forehead SpO2 sensor.[9] Según investigaciones realizadas por Medtronic, la frente es una zona estratégica debido a que se ha demostrado que las mediciones son más precisas  que las tomadas por un oxímetro de dedo convencional. [10] 
 <br>También se ha identificado que los sensores utilizados en la frente miden el cambio de la saturación de oxígeno arterial alrededor de uno a dos minutos antes que un sensor digital para pacientes con pulsos débiles. Cabe resaltar que la técnica del PPG resulta muy efectiva en la frente, la cual se encuentra entre sus principales ubicaciones para su uso.[11]
-<br>
+<br>Consideramos, además, el parámetro de temperatura, ya que, incluso si los pacientes están asintomáticos o tienen síntomas leves, los médicos deben observarlos de cerca, especialmente si presentan escalofríos o temperatura corporal&gt; 37,5°C[12]. Asimismo se ha visto en estudios que en pacientes que presentaron una temperatura corporal menor o igual a 36°C se presentó la tasa de mortalidad más alta[13][14]. Con esto podemos concluir que la detección de una muy baja o alta temperatura es un marcador de mal pronóstico.
 <br>Por otro lado, las mediciones resultantes serán transmitidas vía Bluetooth al celular del paciente. Estas serán almacenadas en una aplicación con una interfaz amigable e interactiva que le permitirá al usuario revisar los cambios en sus signos vitales, permitiendo un monitoreo constante y eficaz.&nbsp;<br></p>
                 </div>
             </div>
@@ -323,8 +323,9 @@
  Disponible en: https://pubmed.ncbi.nlm.nih.gov/26827310/</li><li>J. Allen, “Photoplethysmography and its application in clinical physiological measurement,” Physiological Measurement, vol. 28, no. 3, pp. R1–R39, Feb. 2007.
 </li><li>“NellcorTM SpO₂ Forehead Sensor with OxiMaxTM Technology | Medtronic,” Medtronic.com, 2020. [Online]. Available: https://www.medtronic.com/covidien/en-us/products/pulse-oximetry/nellcor-spo2-forehead-sensor.html. [Accessed: 05-Oct-2020].
 </li><li>G. S. Agashe, J. Coakley, and P. D. Mannheimer, “Forehead Pulse Oximetry,” Anesthesiology, vol. 105, no. 6, pp. 1111–1116, Dec. 2006.
-</li><li>M. Ghamari, “A review on wearable photoplethysmography sensors and their potential future applications in health care,” International Journal of Biosensors &amp; Bioelectronics, vol. 4, no. 4, 2018.
-</li>
+</li><li>M. Ghamari, “A review on wearable photoplethysmography sensors and their potential future applications in health care,” International Journal of Biosensors &amp; Bioelectronics, vol. 4, no. 4, 2018. </li><li>[12] M. C. Chang, Y.-K. Park, B.-O. Kim, and D. Park, “Risk factors for disease progression in COVID-19 patients,” BMC Infectious Diseases, vol. 20, no. 1, Jun. 2020 [Online]. Available: https://link.springer.com/article/10.1186/s12879-020-05144-x#citeas. [Accessed: 07-Oct-2020]
+</li><li>[13] S. Tharakan, K. Nomoto, S. Miyashita, and K. Ishikawa, “Body temperature correlates with mortality in COVID-19 patients,” Critical Care, vol. 24, no. 1, Jun. 2020 [Online]. Available: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7274509/. [Accessed: 07-Oct-2020]
+</li><li>[14] A. M. Drewry, R. Hotchkiss, and E. Kulstad, “Response to ‘Body temperature correlates with mortality in COVID-19 patients,’” Critical Care, vol. 24, no. 1, Jul. 2020 [Online]. Available: https://link.springer.com/article/10.1186/s13054-020-03186-w#Bib1. [Accessed: 07-Oct-2020]</li>
                     </ol>
                 </div>
             </div>
