create github pages

--- a/page13.html
+++ b/page13.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header18 cid-sbXfYVa2pc mbr-fullscreen mbr-parallax-background" id="header18-aa">
 
     
 
@@ -323,9 +323,9 @@
  Disponible en: https://pubmed.ncbi.nlm.nih.gov/26827310/</li><li>J. Allen, “Photoplethysmography and its application in clinical physiological measurement,” Physiological Measurement, vol. 28, no. 3, pp. R1–R39, Feb. 2007.
 </li><li>“NellcorTM SpO₂ Forehead Sensor with OxiMaxTM Technology | Medtronic,” Medtronic.com, 2020. [Online]. Available: https://www.medtronic.com/covidien/en-us/products/pulse-oximetry/nellcor-spo2-forehead-sensor.html. [Accessed: 05-Oct-2020].
 </li><li>G. S. Agashe, J. Coakley, and P. D. Mannheimer, “Forehead Pulse Oximetry,” Anesthesiology, vol. 105, no. 6, pp. 1111–1116, Dec. 2006.
-</li><li>M. Ghamari, “A review on wearable photoplethysmography sensors and their potential future applications in health care,” International Journal of Biosensors &amp; Bioelectronics, vol. 4, no. 4, 2018. </li><li>[12] M. C. Chang, Y.-K. Park, B.-O. Kim, and D. Park, “Risk factors for disease progression in COVID-19 patients,” BMC Infectious Diseases, vol. 20, no. 1, Jun. 2020 [Online]. Available: https://link.springer.com/article/10.1186/s12879-020-05144-x#citeas. [Accessed: 07-Oct-2020]
-</li><li>[13] S. Tharakan, K. Nomoto, S. Miyashita, and K. Ishikawa, “Body temperature correlates with mortality in COVID-19 patients,” Critical Care, vol. 24, no. 1, Jun. 2020 [Online]. Available: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7274509/. [Accessed: 07-Oct-2020]
-</li><li>[14] A. M. Drewry, R. Hotchkiss, and E. Kulstad, “Response to ‘Body temperature correlates with mortality in COVID-19 patients,’” Critical Care, vol. 24, no. 1, Jul. 2020 [Online]. Available: https://link.springer.com/article/10.1186/s13054-020-03186-w#Bib1. [Accessed: 07-Oct-2020]</li>
+</li><li>M. Ghamari, “A review on wearable photoplethysmography sensors and their potential future applications in health care,” International Journal of Biosensors &amp; Bioelectronics, vol. 4, no. 4, 2018. </li><li>M. C. Chang, Y.-K. Park, B.-O. Kim, and D. Park, “Risk factors for disease progression in COVID-19 patients,” BMC Infectious Diseases, vol. 20, no. 1, Jun. 2020 [Online]. Available: https://link.springer.com/article/10.1186/s12879-020-05144-x#citeas. [Accessed: 07-Oct-2020]
+</li><li>S. Tharakan, K. Nomoto, S. Miyashita, and K. Ishikawa, “Body temperature correlates with mortality in COVID-19 patients,” Critical Care, vol. 24, no. 1, Jun. 2020 [Online]. Available: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7274509/. [Accessed: 07-Oct-2020]
+</li><li>A. M. Drewry, R. Hotchkiss, and E. Kulstad, “Response to ‘Body temperature correlates with mortality in COVID-19 patients,’” Critical Care, vol. 24, no. 1, Jul. 2020 [Online]. Available: https://link.springer.com/article/10.1186/s13054-020-03186-w#Bib1. [Accessed: 07-Oct-2020]</li>
                     </ol>
                 </div>
             </div>
