create github pages

--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
     
 
     
