--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">
-                            Caso clínico</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white text-primary dropdown-toggle display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">
+                            Caso clínico</a></li><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">
                             Entregables</a><div class="dropdown-menu"><a class="text-white text-primary dropdown-item display-4" href="page3.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">Entregable 1</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 2</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="page6.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="page8.html" aria-expanded="false">Social</a><a class="text-white text-primary dropdown-item display-4" href="economía.html" aria-expanded="false">Económico</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Descripción<br>del problema</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="page9.html" aria-expanded="false">Problema<br>definido</a><a class="text-white text-primary dropdown-item display-4" href="page9.html" aria-expanded="false">Prevalencia e<br>inicidencia</a></div></div></div></div><a class="text-white text-primary dropdown-item display-4" href="page12.html" aria-expanded="false">Entregable 3</a><a class="text-white text-primary dropdown-item display-4" href="page13.html" aria-expanded="false">Hito 1</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 5</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="page14.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="page15.html" aria-expanded="false">Descripción de <br>materiales</a></div></div><a class="text-white text-primary dropdown-item display-4" href="page17.html" aria-expanded="true">Entregable 6</a></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page16.html" aria-expanded="false">
                             Información general</a></li></ul>
                 
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
 
     
 
@@ -128,7 +128,7 @@
                 <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page3.html">Vea el proyecto y sus avances</a></div>
             </div>
                         <div class="col-md-12 col-lg-9">
-                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page14.html">Novedad: Conceptos de solución</a></div>
+                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page17.html">Novedad: Valoración y modelos 3D</a></div>
         </div>
     </div>
 </div></section>
