create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
 
     
 
@@ -99,7 +99,7 @@
             <div class="title col-12 col-md-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>¿Quiénes somos?</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Somos un grupo de jóvenes, estudiantes de la carrera Ingeniería Biomédica PUCP-UPCH, que busca mejorar la salud en el Perú ante la problemática del coronavirus COVID-19 y la atención remota a los que padecen de esta enfermedad.&nbsp;</h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page1.html">Conozca a los integrantes</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="nosotros.html">Conozca a los integrantes</a></div>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
             <div class="title col-12 col-md-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>¿Ante qué actuamos?</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Caso clínico de paciente asintomático contagiado con COVID-19 y el monitoreo a distancia de este.</h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page2.html">Sepa sobre el caso</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="caso_clinico.html">Sepa sobre el caso</a></div>
             </div>
         </div>
     </div>
@@ -125,10 +125,10 @@
             <div class="title col-12 col-md-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>¿Qué proponemos?: M.A.P.A.</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Nuestra propuesta de solución ante el problema</h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page3.html">Vea el proyecto y sus avances</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="entregables.html">Vea el proyecto y sus avances</a></div>
             </div>
                         <div class="col-md-12 col-lg-9">
-                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="page17.html">Novedad: Valoración y modelos 3D</a></div>
+                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="entregable7.html">Novedad: Plan de trabajo y diagrama de Gantt</a></div>
         </div>
     </div>
 </div></section>
