create github pages

--- a/entregable7.html
+++ b/entregable7.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
 
     
 
@@ -117,7 +117,7 @@
                     <strong>Diagrama de Gantt</strong></h3>
                 
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Mediante el sitio web Instagantt, se elaboró el diagrama que se puede ver abajo. Se consideraron su</p>
+                    Mediante el sitio web Instagantt, se elaboró el diagrama que se puede ver abajo. Se consideraron todos los eventos descritos en la parte superior, así como el tiempo en días que tomaría cada uno y el avance que se ha tenido o tiene en estos.</p>
             </div>
         </div>
     </div>
