create github pages

--- a/entregable7.html
+++ b/entregable7.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header2 cid-sdNgiWJ9hv mbr-fullscreen mbr-parallax-background" id="header2-e1">
 
     
 
@@ -88,7 +88,7 @@
                     Recapitulación de las semanas anteriores</strong></h6>
             </div>
             <div class="col-md-12 col-lg-8">
-                <p class="mbr-text mbr-fonts-style display-7"><strong>Problema:</strong>&nbsp;Falta de tecnología personalizada y accesible para el monitoreo de las señales pulmonares y cardiacas de pacientes asintomáticos a distancia <br><strong>Estrategia:</strong>&nbsp;Banda para la cabeza capaz de medir temperatura y pulsioximetría mediante señales ppg.<br><strong>Concepto:</strong>&nbsp;M.A.P.A. (Mediciones Ayudando al Paciente Asintomático)<br><strong>Revestimiento: </strong>Esponja elástica, algodón y nylon<br><strong>Componentes electrónicos:</strong> Pila de reloj -&gt; Botón táctil -&gt; Sensor DS18B20+ -&gt; Sensor PPG LM35-&gt; Arduino Nano -&gt; Bluetooth HC-05<br><strong>Componentes de aplicación:</strong>&nbsp; Programación Java-&gt; Android Studio -&gt; TensorFlow -&gt; Dispositivo móvil con sistema operativo Android -&gt; Almacenamiento en Google Firebase<br><strong>Proyectos preliminares:</strong><br>1) Estilo antifaz, orientada para el uso mientras duerme el paciente<br>2) Estilo deportivo, orientada al uso diario<br>3) Estilo casual, ideal para el uso diario.</p>
+                <p class="mbr-text mbr-fonts-style display-7"><strong>Problema:</strong>&nbsp;Falta de tecnología personalizada y accesible para el monitoreo de las señales pulmonares y cardiacas de pacientes asintomáticos a distancia <br><strong>Estrategia:</strong>&nbsp;Banda para la cabeza capaz de medir temperatura y pulsioximetría mediante señales ppg.<br><strong>Concepto:</strong>&nbsp;M.A.P.A. (Mediciones Ayudando al Paciente Asintomático)<br><strong>Material: </strong>Esponja elástica, algodón y nylon<br><strong>Componentes electrónicos:</strong> Pila de reloj -&gt; Botón táctil -&gt; Sensor DS18B20+ -&gt; Sensor PPG LM35-&gt; Arduino Nano -&gt; Bluetooth HC-05<br><strong>Componentes de aplicación:</strong>&nbsp; Programación Java-&gt; Android Studio -&gt; TensorFlow -&gt; Dispositivo móvil con sistema operativo Android -&gt; Almacenamiento en Google Firebase<br><strong>Proyecto preliminar:&nbsp;</strong>Estilo deportivo, orientada al uso diario<br></p>
             </div>
         </div>
     </div>
