create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header1 cid-s48MCQYojq mbr-fullscreen mbr-parallax-background" id="header1-f">
 
     
 
@@ -128,7 +128,7 @@
                 <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="entregables.html">Vea el proyecto y sus avances</a></div>
             </div>
                         <div class="col-md-12 col-lg-9">
-                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="entregable7.html">Novedad: Plan de trabajo y diagrama de Gantt</a></div>
+                                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="hito2.html">Novedad: Diagrama modular</a></div>
         </div>
     </div>
 </div></section>
