--- a/entregables.html
+++ b/entregables.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
     
 
     
@@ -211,7 +211,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/technology-1095751-1922-517x144.jpeg" alt="" title="" data-slide-to="3">
+                        <a href="hito2.html"><img src="assets/images/technology-1095751-1922-517x144.jpeg" alt="" title="" data-slide-to="3"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
