--- a/prevalencia.html
+++ b/prevalencia.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="content5 cid-saJdlZIQTk" id="content5-9b">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="content5 cid-saJdlZIQTk" id="content5-9b">
     
     <div class="container">
         <div class="row justify-content-center">
@@ -71,8 +71,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sffyVw3ttD-modal">
-                    <img class="w-100" src="assets/images/2743853-1-506x506.png" alt="" data-slide-to="0" data-target="#lb-sffyVw3ttD">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sfiFeqSWDh-modal">
+                    <img class="w-100" src="assets/images/2743853-1-506x506.png" alt="" data-slide-to="0" data-target="#lb-sfiFeqSWDh">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -80,8 +80,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>FALLECIDOS</strong><br>31,938</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sffyVw3ttD-modal">
-                    <img class="w-100" src="assets/images/82415-506x506.png" alt="" data-slide-to="1" data-target="#lb-sffyVw3ttD">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sfiFeqSWDh-modal">
+                    <img class="w-100" src="assets/images/82415-506x506.png" alt="" data-slide-to="1" data-target="#lb-sfiFeqSWDh">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -89,8 +89,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>LETALIDAD</strong><br>4.05%</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sffyVw3ttD-modal">
-                    <img class="w-100" src="assets/images/3150472-506x506.png" alt="" data-slide-to="2" data-target="#lb-sffyVw3ttD">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sfiFeqSWDh-modal">
+                    <img class="w-100" src="assets/images/3150472-506x506.png" alt="" data-slide-to="2" data-target="#lb-sfiFeqSWDh">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -98,8 +98,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>PCR(+)</strong><br>181,745</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sffyVw3ttD-modal">
-                    <img class="w-100" src="assets/images/125016-506x506.png" alt="" data-slide-to="3" data-target="#lb-sffyVw3ttD">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sfiFeqSWDh-modal">
+                    <img class="w-100" src="assets/images/125016-506x506.png" alt="" data-slide-to="3" data-target="#lb-sfiFeqSWDh">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -108,11 +108,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sffyVw3ttD-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sfiFeqSWDh-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sffyVw3ttD" data-interval="5000">
+                        <div class="carousel slide" id="lb-sfiFeqSWDh" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/2743853-1-506x506.png" alt="">
@@ -128,18 +128,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-sffyVw3ttD"></li>
-                                <li data-slide-to="1" data-target="#lb-sffyVw3ttD"></li>
-                                <li data-slide-to="2" data-target="#lb-sffyVw3ttD"></li>
-                                <li data-slide-to="3" data-target="#lb-sffyVw3ttD"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sfiFeqSWDh"></li>
+                                <li data-slide-to="1" data-target="#lb-sfiFeqSWDh"></li>
+                                <li data-slide-to="2" data-target="#lb-sfiFeqSWDh"></li>
+                                <li data-slide-to="3" data-target="#lb-sfiFeqSWDh"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sffyVw3ttD">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sfiFeqSWDh">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sffyVw3ttD">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sfiFeqSWDh">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
