create github pages

--- a/hito2.html
+++ b/hito2.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="header3 cid-sffr06hUzV mbr-fullscreen" id="header3-ee">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header3 cid-sffr06hUzV mbr-fullscreen" id="header3-ee">
 
     
 
@@ -152,8 +152,7 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Diagrama de casos de uso</strong></h4>
-                <p class="mbr-text mbr-fonts-style display-7">
-                    You can use content blocks to arrange your articles, large texts, instructions. Combine these blocks with media blocks to add illustrations and video tutorials. You can use various content blocks to work with your text. Add quotations, lists, buttons. Select your text to change its formatting or add links. Mobirise is a simple website builder that helps you create amazing web pages without knowing any code.</p>
+                <p class="mbr-text mbr-fonts-style display-7">En este se muestra cómo el usuario interactúa con la aplicación y el dispositivo.&nbsp; Las primeras acciones que debe hacer son registrarse y tomar las mediciones (saturación de oxígeno, temperatura y frecuencia cardiaca). La primera acción incluye sincronización con el dispositivo y guardar los datos de la medición. A partir de la otras acciones, se registran los datos y muestra un gráfico con la evolución del paciente. Además, se evalúa la posibilidad de enviar una alerta según los valores adquiridos.</p>
             </div>
         </div>
     </div>
